--- a/action.yml
+++ b/action.yml
@@ -17,6 +17,7 @@ runs:
   using: 'composite'
   steps:
     - name: DEBUG
+      shell: bash
       run: echo ${{inputs.projectRoot}}
 
     - name: Run analyse task
