--- a/action.yml
+++ b/action.yml
@@ -30,6 +30,15 @@ runs:
         ANALYZE_CONFIG: ${{ inputs.config }}
 
     - name: Upload SARIF report
+      if: ${{ success() }}
+      uses: actions/upload-artifact@v4
+      with:
+        name: report.sarif
+        path: ${{inputs.projectRoot}}/report-ifds.sarif
+
+    - name: Upload SARIF report to GitHub
+      if: ${{ success() }}
+      continue-on-error: true
       uses: github/codeql-action/upload-sarif@v3
       with:
         sarif_file: ${{inputs.projectRoot}}/report-ifds.sarif
